Article related API request handling added.
